# stonksbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yml.example  docker-compose.yml  pyproject.toml
conf/: .gitignore  config.py
logs/: .gitignore
stonksbot/: README.md  bot.py  client.py  keyboards.py  main.py  messages.py  store.py  utils.py
